Correct line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,11 @@ img {
   width: 100%;
 }
 
-img-flex {
+.img-flex {
+  margin-top: 0;
+  padding-top: 1rem;
   display: flex;
+  width: 100%;
 }
 
 header {
@@ -40,6 +43,7 @@ header {
 }
 
 h1 {
+  padding-top: 0;
   font-size: 2rem;
   margin: 0;
 }
@@ -47,11 +51,12 @@ h1 {
 .header-text p {
   font-size: 1.125rem;
   margin: 0;
+
 }
 
 .header-text {
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  padding-top: 0;
+  padding-bottom: 0;
   align-items: center;
   margin-bottom: 0;
 }
@@ -59,6 +64,7 @@ h1 {
 nav {
   padding: .5rem;
   margin-top: 0;
+  padding-top: 0;
   padding-bottom: 0;
 }
 
@@ -80,11 +86,6 @@ li a {
   font-weight: 100;
 }
 
-hr {
-  color: #e2e2e2;
-  border: 16px;
-}
-
 .subheader {
   padding: 1rem;
   padding-bottom: 0;
@@ -92,13 +93,13 @@ hr {
   border: .2rem solid #e2e2e2;
   border-left-width: 0px;
   border-right-width: 0px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
 }
 
 h2 {
   margin: 0;
   padding: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0;
   font-size: 2rem;
   max-width: 30em;
   text-align: center;
@@ -106,10 +107,10 @@ h2 {
 }
 
 .subheader p {
-  margin: 0;
-  padding: 1rem;
-  font-size: 1.125rem;
-  margin-bottom: 1rem;
+  margin: 1.5rem;
+  padding: .5rem;
+  font-size: 1rem;
+  margin-top: 0rem;
   max-width: 30em;
   text-align: center;
   justify-content: center;
@@ -120,10 +121,6 @@ section {
   padding: 1rem;
   padding-top: 0;
   padding-bottom: 0;
-}
-
-section img {
-  margin-bottom: 1.5rem;
 }
 
 section p{
@@ -139,8 +136,8 @@ h3 {
 
 .subhead p {
   margin-top: 0;
-  font-size: 1.125rem;
-  margin-bottom: 1.5rem;
+  font-size: 1rem;
+  margin-bottom: 0;
 }
 
 .button{
